# ai-booking-system

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 448b90860c1e_remove_requested_date_and_link_.py  5821251d4c37_initial_schema.py  e656effc189d_make_doctor_id_required_and_remove_.py
app/: main.py  verify_models.py
app/api/: deps.py
app/api/mappers/: availability.py  booking.py
app/api/routers/: availability.py  bookings.py  doctors.py  vapi.py
app/core/: config.py  db.py
app/docs/: AI_BOOKING_SYSTEM_DESIGN_AND_ARCHITECTURE.md  AI_Booking_SYSTEM_DECISIONS_LOG.md  API_LAYER_BLUEPRINT.md  BUSINESS_RULES_&_SCHEDULING_POLICY.md  SYSTEM_BEHAVIOUR_DESIGN.md
app/models/: Clinic.py  __init__.py  appointment.py  booking_request.py  doctor.py  patient.py  schedule.py
app/repositories/: appointment_repository.py  booking_request.py  clinic_repository.py  doctor_repository.py  patient_repository.py  schedule_repository.py
app/schemas/: __init__.py  availability.py  booking.py  common.py  doctor.py
app/services/: availability_service.py  booking_service.py  patient_resolution_service.py
app/tests/: conftest.py
app/tests/integration/: test_api_database_state.py  test_api_failures.py  test_api_validation.py  test_api_workflow.py  test_vapi_webhook.py
app/tests/unit/: test_availability_service.py  test_booking_service.py  test_patient_resolution_service.py
