[project]
name = "ai-booking-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.137.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "pytest>=8.0.0",
    "httpx2>=2.7.0",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["app/tests"]
